--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>www.haohui-machinery.com</title>
 	</head>
 	<body>
-		你好
+		www.haohui-machinery.com
+		昊辉机械设备有限公司
 	</body>
 </html>
