--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>www.haohui-machinery.com</title>
 	</head>
 	<body>
-		www.haohui-machinery.com
-		昊辉机械设备有限公司
+		<h1>www.haohui-machinery.com&nbsp;
+			昊辉机械设备有限公司
+		</h1>
 	</body>
 </html>
