--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>www.haohui-machinery.com</title>
 	</head>
 	<body>
-		<h1>www.haohui-machinery.com&nbsp;
+		<h1>www.haohui-machinery.com<br>
 			昊辉机械设备有限公司
 		</h1>
 	</body>
