--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>www.haohui-machinery.com</title>
 	</head>
 	<body>
-		<h1>www.haohui-machinery.com<br>
-			昊辉机械设备有限公司
-		</h1>
+		<h1>Tianjin Haohui Machinery Co., Ltd. </h1>
+		<h1>昊辉机械设备有限公司</h1>
+		<p>www.haohui-machinery.com</p>
 	</body>
 </html>
